Deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-service
spec:
  selector:
    app: inference-server
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
