Deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inference-ingress
spec:
  rules:
    - http:
        paths:
          - path: /inference
            pathType: Prefix
            backend:
              service:
                name: inference-service
                port:
                  number: 50051
